--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<h1>Hey. I'm a big heading</h1>
-<p>Hey. I'm a paragraph element. Cool huh?</p>
-<a href="https://google.com" target="_blank" title="Lets go to google">Click me! I'm a link!</a>
+<!doctype html>
+<html>
+<head>
+    <title>Test page</title>
+</head>
+<body>
+  <h1>Hey. I'm a big heading</h1>
+  <p>Hey. I'm a <b>paragraph</b> element. Cool huh?</p>
+  <a href="https://google.com" target="_blank" title="Lets go to google">Click me! I'm a link!</a>
+  <p>My name is:<br>
+  <b>Yumeko</b></p>
+  <img src="img/yumeko.jpeg">
+</body>
+</html>
